--- a/ecommerce/src/styles/components/_productsPage.scss
+++ b/ecommerce/src/styles/components/_productsPage.scss
@@ -6,20 +6,36 @@
     min-width: 250px;
     max-width: 350px;
     min-height: 100px;
-    @include flex(column, space-between, center, nowrap);
+    padding: 20px;
+    @include flex(column, flex-start, center, nowrap, 10px);
     position: relative;
     border-radius: 5px;
+    background-color: c(surface);
     -webkit-box-shadow: 0px 5px 12px 2px rgba(0,0,0,0.30); 
     box-shadow: 0px 5px 12px 2px rgba(0,0,0,0.30);
     img {
         width: 100%;
-        height: 60%;
+        object-fit: cover;
     }
     span {
         position: absolute;
         top: 0;
         left: 0;
-        background-color: red;
+        background-color: c(accent);
     }
+    a {
+        background-color: c(primary);
+        text-decoration: none;
+        color: white;
+        padding: 10px;
+        border-radius: 5px;
+        &:hover {
+            background-color: c(primary-soft);
+        }
+    }
+    &__title {
+        height: 40px;
+    }
+
     
 }
