[UPDATE] sidebar and products page for admitting category filtering

--- a/ecommerce/src/styles/main.scss
+++ b/ecommerce/src/styles/main.scss
@@ -6,4 +6,5 @@
 @use "./components/productsPage";
 @use "./components/app";
 @use "./components/header";
-@use "./components/productDetail"
+@use "./components/productDetail";
+@use "./components/sidebar";
