--- a/ecommerce/src/styles/components/_header.scss
+++ b/ecommerce/src/styles/components/_header.scss
@@ -3,19 +3,17 @@
 .header {
     width: 100%;
     position: sticky;
-    @include flex(row, flex-start, center, wrap);
+    @include flex(row, center, center, wrap);
     &__img {
         width: 30%;
         max-width: 380px;
-        min-width: 270px;
-        min-height: 70px;
+        min-width: 350px;
+        min-height: 120px;
     }
     &__btn {
         width: 3%;
         min-width: 40px;
         min-height: 40px;
-        margin-left: auto;
-        margin-right: 5%;
         img {
             width: 100%;
             object-fit: cover;
@@ -23,7 +21,8 @@
     }
     &__input {
         width: 60%;
-        @include flex(row,flex-start, center, wrap);
+        min-width: 331px;
+        @include flex(row,flex-start, center);
         input {
             min-height: 38px;
             width: 70%;
@@ -39,7 +38,8 @@
             box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
             img {
                 width: 100%;
-                object-fit: contain;                height: 100%;
+                object-fit: contain;                
+                height: 100%;
             }
         }
     }
