--- a/ecommerce/src/styles/components/_sidebar.scss
+++ b/ecommerce/src/styles/components/_sidebar.scss
@@ -1,34 +1,85 @@
 @use '../abstracts/' as *;
 
-.btn-collapse {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    z-index: 20;
-    &--modal {
-        right: 65%;
-    }
-}
+
+
+$sidebar-w: min(600px, 85vw);
 
 .sidebar {
     position: fixed;
     top: 0;
     right: 0;
-    min-height: 100vh;
+    min-height: 100dvh;
     z-index: 10;
-    width: 100%;
-    max-width: 600px;
-    text-align: justify;
+    width: $sidebar-w;
     text-wrap: balance;
-    @include flex(column, center, center, wrap);
-    background-color: c(primary-soft);
+    @include flex(row, space-around, center, wrap);
+    background: c(primary);
+    //padding-left: max(30px, 10vw);
+    background: linear-gradient(90deg,rgba(86, 3, 173, 1) 29%, rgba(131, 103, 199, 1) 87%, rgba(146, 137, 207, 1) 94%, rgba(157, 162, 213, 1) 100%, rgba(187, 230, 228, 1) 100%);
     backdrop-filter: blur(10px);
 
-    p{
-        cursor: pointer;
-        &:hover {
-            color: c(accent);
-        }
+    transform: translateX(105%);
+    transition: transform 280ms ease, opacity 280ms ease;
+    opacity: 0;
+    pointer-events: none;
 
+    h2 {
+        color: c(bg);
+    }
+
+    &__categories {
+        height: 80%;
+        width: max(300px, 50%);
+        @include flex(column, center, start, wrap);
+        &__link{
+            &:hover {
+                color: c(accent);
+            }
+            
+        }
+    }
+    &__link{
+        text-decoration: none;
+        color: c(bg);
+    }
+
+    &__filters {
+        @include flex(column, center, start, wrap);
+        
+    }
+
+
+    &--open {
+        transform: translateX(0);
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    &--closed {
+        transform: translateX(105%);
+        opacity: 0;
+        pointer-events: none;
+    }
+
+}
+
+.btn-collapse {
+    position: fixed;
+    top: 50%;
+    right: 0;
+    z-index: 20;
+    transform: translateY(-50%);
+    font-size: 1.4rem;
+    transition: right 280ms ease, transform 280ms ease;
+
+    padding: 30px 12px;
+    border-radius: 100px 1px 2px 100px;
+    border: none;
+    background: c(primary);
+    color: white;
+    backdrop-filter: blur(10px);
+
+    &--open {
+        right: calc(#{$sidebar-w} - 3px);
     }
 }
