[ADD] input query filters based on sets and some css

--- a/ecommerce/src/styles/components/_productsPage.scss
+++ b/ecommerce/src/styles/components/_productsPage.scss
@@ -35,6 +35,22 @@
     }
     &__title {
         height: 40px;
+        
+    }
+    &__price {
+        font-weight: 900;
+        font-size: x-large;
+    }
+    &__rating {
+        @include flex(row, center, center, wrap, 4px);
+        &__stars {
+            list-style-type: none;
+            @include flex(row, center, center, wrap, 4px);
+            
+        }
+        &__star {
+            color: c(accent);
+        }
     }
 
     
