--- a/ecommerce/src/styles/components/_header.scss
+++ b/ecommerce/src/styles/components/_header.scss
@@ -30,6 +30,10 @@
             box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
             border: none;
             font-size: 16px;
+            &:focus{
+                border:1px solid c(primary);
+                outline: none;
+            }
         }
         button {
             max-width: 40px;
